# airmux

./: Cargo.toml  Cross.toml  LICENSE  README.md  Xargo.toml  log  out  out2  out3
.github/workflows/: build.yml  cargo-audit.yml  cargo-clippy.yml  cargo-fmt.yml  cargo-test.yml  cargo-udeps.yml
src/: actions.rs  command.rs  config.rs  data.rs  lib.rs  main.rs  pane.rs  pane_split.rs  panesplit.rs  project.rs  project_template.rs  startup_window.rs  utils.rs  window.rs  working_dir.rs
src/assets/: default_project.json  default_project.yml  default_template.tera
src/config/: app.yml
src/test/: actions.rs  command.rs  config.rs  data.rs  pane.rs  project.rs  project_template.rs  utils.rs  window.rs
src/yaml/: default_project.yml
