[package]
name = "rmux"
version = "0.1.0"
authors = ["Dermoumi S. <hi@sdrm.me>"]
edition = "2018"
description = "Generates tmux sessions out of yaml files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3", features = ["yaml", "color"] }
app_dirs = "1.2.1"
yaml-rust = "0.3.5"
mkdirp = "1.0.0"
shell-words = "1.0.0"
snafu = "0.6.9"
main_error = "0.1.1"
dialoguer = "0.7.1"
tera = "1.5.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_yaml = "0.8.14"
shellexpand = "2.0.0"

[dev-dependencies]
tempfile = "3.1.0"
